[package]
name = "codelist"
version = "1.0.2"
edition = "2021"
authors = ["Siliwolf"]
license = "MIT"
description = "A tiny tool for surfing a file structure, intended for codebases "
readme = "README.md"
homepage = "https://github.com/Siliwolf/codelist"
repository = "https://github.com/Siliwolf/codelist"
keywords = ["cli", "directory", "codebase", "file", "tiny"]
categories = ["command-line-utilities"]

[dependencies]
